--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "browserify-optional": "^1.0.0",
     "classnames": "^2.1.1",
     "radium": "^0.18.0",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
     "snapsvg": "^0.4.0"
   },
   "devDependencies": {
