--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "sinon": "^1.16.1"
   },
   "peerDependencies": {
-    "react": ">=0.14.0 <16.0.0",
-    "react-dom": ">=0.14.0 <16.0.0"
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8"
   },
   "browserify": {
     "transform": [
